# gst-plugins-bad

./: .gitignore  meson.build
ext/: meson.build
ext/assrender/: meson.build
ext/bz2/: meson.build
ext/chromaprint/: meson.build
ext/curl/: meson.build
ext/dash/: meson.build
ext/directfb/: meson.build
ext/dtls/: meson.build
ext/dts/: meson.build
ext/faac/: meson.build
ext/faad/: meson.build
ext/flite/: meson.build
ext/fluidsynth/: meson.build
ext/hls/: meson.build
ext/kate/: meson.build
ext/libde265/: meson.build
ext/libmms/: meson.build
ext/mpg123/: meson.build
ext/openh264/: meson.build
ext/openjpeg/: meson.build
ext/opus/: meson.build
ext/resindvd/: meson.build
ext/rsvg/: meson.build
ext/rtmp/: meson.build
ext/sbc/: meson.build
ext/schroedinger/: meson.build
ext/smoothstreaming/: meson.build
ext/spandsp/: meson.build
ext/srtp/: meson.build  srtp_mkenum.py
ext/voaacenc/: meson.build
ext/webp/: meson.build
ext/webrtc/: gstwebrtcbin.c  gstwebrtcbin.h  transportstream.h  utils.c  webrtcsdp.c
ext/x265/: meson.build
ext/zbar/: meson.build
gst/: meson.build
gst-libs/: _stdint.h
gst-libs/gst/: meson.build
gst-libs/gst/adaptivedemux/: meson.build
gst-libs/gst/audio/: meson.build
gst-libs/gst/base/: meson.build
gst-libs/gst/basecamerabinsrc/: meson.build
gst-libs/gst/codecparsers/: meson.build
gst-libs/gst/gl/: meson.build
gst-libs/gst/insertbin/: meson.build
gst-libs/gst/interfaces/: build_mkenum.py  meson.build
gst-libs/gst/mpegts/: meson.build  mpegts_enum.py
gst-libs/gst/player/: meson.build
gst-libs/gst/uridownloader/: meson.build
gst-libs/gst/video/: gstvideoaggregator.c  meson.build
gst-libs/gst/webrtc/: rtptransceiver.h
gst/accurip/: meson.build
gst/adpcmdec/: meson.build
gst/adpcmenc/: meson.build
gst/aiff/: meson.build
gst/asfmux/: meson.build
gst/audiobuffer/: meson.build
gst/audiofxbad/: meson.build
gst/audiomixer/: meson.build
gst/audiovisualizers/: gstspacescope.c  gstspectrascope.c  gstsynaescope.c  gstwavescope.c  meson.build
gst/autoconvert/: meson.build
gst/bayer/: gstbayer2rgb.c  meson.build
gst/camerabin2/: meson.build
gst/cdxaparse/: meson.build
gst/coloreffects/: meson.build
gst/compositor/: meson.build
gst/dataurisrc/: meson.build
gst/dccp/: gstdccp_common.h  meson.build
gst/debugutils/: meson.build
gst/dvbsuboverlay/: meson.build
gst/dvdspu/: meson.build
gst/faceoverlay/: meson.build
gst/festival/: meson.build
gst/fieldanalysis/: meson.build
gst/freeverb/: meson.build
gst/frei0r/: meson.build
gst/games/: meson.build
gst/gaudieffects/: meson.build
gst/gdp/: meson.build
gst/geometrictransform/: meson.build
gst/hdvparse/: meson.build
gst/id3tag/: meson.build
gst/inter/: meson.build
gst/interlace/: meson.build
gst/ivfparse/: meson.build
gst/ivtc/: meson.build
gst/jp2kdecimator/: meson.build
gst/jpegformat/: meson.build
gst/librfb/: d3des.c  meson.build
gst/midi/: meson.build
gst/mixmatrix/: meson.build
gst/mpeg1sys/: meson.build
gst/mpegdemux/: meson.build
gst/mpegpsmux/: meson.build
gst/mpegtsdemux/: meson.build
gst/mpegtsmux/: meson.build
gst/mve/: meson.build
gst/mxf/: meson.build
gst/nuvdemux/: meson.build
gst/onvif/: meson.build
gst/overlay/: meson.build
gst/patchdetect/: meson.build
gst/pcapparse/: meson.build
gst/pnm/: meson.build
gst/rawparse/: meson.build
gst/real/: meson.build
gst/removesilence/: meson.build
gst/rtjpeg/: meson.build
gst/rtp/: meson.build
gst/sdi/: meson.build
gst/sdp/: meson.build
gst/segmentclip/: meson.build
gst/siren/: gstsirendec.c  meson.build
gst/smooth/: meson.build
gst/speed/: meson.build
gst/stereo/: meson.build
gst/subenc/: meson.build
gst/tta/: meson.build
gst/vbidec/: meson.build
gst/videofilters/: meson.build
gst/videoframe_audiolevel/: meson.build
gst/videomeasure/: meson.build
gst/videoparsers/: meson.build
gst/videosignal/: meson.build
gst/vmnc/: meson.build
gst/y4m/: meson.build
gst/yadif/: meson.build
pkgconfig/: meson.build
sys/: meson.build
sys/bluez/: meson.build
sys/d3dvideosink/: d3dhelpers.h  meson.build
sys/dvb/: meson.build
sys/nvenc/: gstnvbaseenc.c  gstnvbaseenc.h
tests/check/elements/: webrtcbin.c
tests/examples/webrtc/: webrtcrenego.c
win32/common/: libgstadaptivedemux.def  libgstbadvideo.def  libgstmpegts.def
