#subdir('apexsink')
subdir('assrender')
#subdir('audiofile')
#subdir('bs2b')
#subdir('bz2')
#subdir('chromaprint')
#subdir('curl')
#subdir('daala')
subdir('dash')
#subdir('dc1394')
#subdir('directfb')
#subdir('dtls')
subdir('dts')
subdir('faac')
subdir('faad')
#subdir('flite')
#subdir('fluidsynth')
#subdir('gl')
#subdir('gme')
#subdir('gsettings')
#subdir('gsm')
#subdir('gtk')
#subdir('hls')
#subdir('kate')
#subdir('ladspa')
#subdir('libde265')
#subdir('libfame')
#subdir('libmms')
#subdir('libvisual')
#subdir('lv2')
#subdir('mimic')
#subdir('modplug')
#subdir('mpeg2enc')
subdir('mpg123')
#subdir('mplex')
#subdir('musepack')
#subdir('nas')
#subdir('neon')
#subdir('ofa')
#subdir('openal')
#subdir('opencv')
#subdir('openexr')
subdir('openh264')
#subdir('openjpeg')
#subdir('openni2')
subdir('opus')
#subdir('qt')
subdir('resindvd')
#subdir('rsvg')
subdir('rtmp')
subdir('sbc')
#subdir('schroedinger')
#subdir('sdl')
subdir('smoothstreaming')
#subdir('snapshot')
#subdir('sndfile')
#subdir('sndio')
#subdir('soundtouch')
subdir('spandsp')
#subdir('spc')
subdir('srtp')
#subdir('teletextdec')
#subdir('timidity')
#subdir('voaacenc')
#subdir('voamrwbenc')
#subdir('wayland')
subdir('webp')
subdir('x265')
#subdir('xvid')
subdir('zbar')
