audiobuffer_sources = [
  'gstaudioringbuffer.c',
]

# Fails for some reason due to missing gst/audio/gstringbuffer.h
# gstaudiobuffer = library('gstaudiobuffer',
#   audiobuffer_sources,
#   c_args : gst_plugins_bad_args,
#   include_directories : gst_plugins_bad_incs,
#   dependencies : [gstbase_dep, gstaudio_dep],
#   install : true,
#   install_dir : plugins_install_dir,
# )
